--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           </svg></i></span>
         </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 pt-3">
           <div class="item">
           <img src="./pexels-stasknop-5939401 (1).jpg" data-aos="zoom-in-up" data-aos-duration="2000" class="img-fluid filter Brand Design Graphic" alt="">
           <span><i class="bi bi-plus" data-toggle="modal" data-target="#portfoliomodal2"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
@@ -261,7 +261,7 @@
           </svg></i></span>
         </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 pt-3">
           <div class="item">
           <img src="./image3.jpg" class="img-fluid filter Brand Design" data-aos="zoom-in-left" data-aos-duration="2000" alt="">
           <span><i class="bi bi-plus" data-toggle="modal" data-target="#portfoliomodal3"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
@@ -279,7 +279,7 @@
         </svg></i></span>
       </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 pt-3">
         <div class="item">
         <img src="./table-5356682_1280.jpg"  class="img-fluid filter" data-aos="zoom-in-up" data-aos-duration="2000" alt="">
         <span><i class="bi bi-plus" data-toggle="modal" data-target="#portfoliomodal5"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
@@ -287,7 +287,7 @@
         </svg></i></span>
       </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 pt-3">
         <div class="item">
         <img src="./flower-vase-5517745_1280.jpg" class="img-fluid filter" data-aos="zoom-in-left" data-aos-duration="2000" alt="">
         <span><i class="bi bi-plus" data-toggle="modal" data-target="#portfoliomodal6"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
