--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> <!--This is copied from github "https://github.com/michalsnik/aos"-->
-    <title>themeaffair</title>
+    <title>Mira Saxena</title>
   </head>
   <body>
 
@@ -56,7 +56,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3"><small>Hello, I'm</small><br>
-            Arpan</h1>
+            Mira</h1>
             <h6 class="pt-3">JR WEB-DEVELOPER</h6>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-6">
             
@@ -77,7 +77,7 @@
           <div class="col-lg-7">
                  <h1>About Me</h1>
                  <p>JUNIOR WEB DEVELOPER</p>
-                 <p class="py-3">I am <span class="font-weight-bold">Arpan Kumar Das</span> passionate web developer with a strong 
+                 <p class="py-3">I am <span class="font-weight-bold">Mira Saxena</span> passionate web developer with a strong 
                   foundation in front-end and back-end technologies.
                  With expertise in HTML, CSS, JavaScript, Bootstrap, 
                  jQuery, and React, I create responsive, dynamic, and 
