--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-5 ">
-            <img src="./arpan10.png" data-aos="fade-right" data-aos-duration="2000" class="img-fluid" width="600px" alt="">
+            <img src="./g2.png" data-aos="fade-right" data-aos-duration="2000" class="img-fluid" width="600px" alt="">
           </div>
           <div class="col-lg-7">
                  <h1>About Me</h1>
