--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
               </div>
 
-              <a href="https://arpan0036.github.io/html-resume/"><input type="button" class="btn1 mt-5" value="Download CV"></a>
+              <a href="https://www.youtube.com/channel/UCkbat2F2-VElfbWdvnkIOiQ"><input type="button" class="btn1 mt-5" value="Download CV"></a>
               <a href="https://wa.me/qr/WKGG3IE2RB2XC1 "><input type="button" class="btn2 mt-5" value="Contact Me"></a>
 
 
